fix(eslint): correct the report path

--- a/.github/workflows/node-tests.yml
+++ b/.github/workflows/node-tests.yml
@@ -67,7 +67,7 @@ jobs:
         if: always()
         with:
           name: ES Lint Report
-          path: 'test-report.html'
+          path: 'eslint-report.html'
 
   # <---------------------  NJSSCAN ---------------------->
   njsscan:
