--- a/.github/workflows/node-tests.yml
+++ b/.github/workflows/node-tests.yml
@@ -52,15 +52,21 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v2
 
-      - name: Setup NodeJS
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ inputs.node-version }}
+      # - name: Setup NodeJS
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: ${{ inputs.node-version }}
 
       - name: Lint
         run: |
           ${{ inputs.install-command }}
           ${{ inputs.eslint.command }}
+      
+      - name: debug
+        run: |
+          pwd
+          ls -la
+          find . -name *.html
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
