chore(java-tests): remove extra character in input description

--- a/.github/workflows/java-tests.yml
+++ b/.github/workflows/java-tests.yml
@@ -106,7 +106,7 @@ on:
       # <----------------- SA KEY AUTH ------------------->
       service-account-key:
         required: false
-        description: "The service account key to use for authentication.ß"
+        description: "The service account key to use for authentication"
       # <------------------ MAVEN AUTH ------------------->
       mvn-settings-file:
         required: false
