--- a/.github/workflows/terraform-tests.yml
+++ b/.github/workflows/terraform-tests.yml
@@ -150,7 +150,7 @@ jobs:
 
   # <------------------ TERRAFORM PLAN ------------------->
   tf-plan:
-    name: Plan Dev
+    name: Terraform Plan
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
