feat: add floating releases for loosely pinning version

--- a/.github/workflows/_project_release.yml
+++ b/.github/workflows/_project_release.yml
@@ -5,5 +5,7 @@ jobs:
   # <--------------- RUN SEMANTIC RELEASE ---------------->
   release:
     uses: erzz/workflows/.github/workflows/semantic-release.yml@main
+    with:
+      create-floating-tag: true
     secrets:
       token: ${{ secrets.RELEASE_TOKEN }}
